# multi_tenant_saas

./: .env  .env.example  Cargo.toml  README.md
migrations/: 20260404210635_create_tenants.sql  20260404210636_create_users.sql  20260404210637_create_projects.sql  20260404210638_create_tasks.sql  20260404210639_create_jobs.sql  20260404210640_enable_rls.sql  20260404210641_allow_worker_bypass_rl_on_jobs.sql
src/: errors.rs  main.rs  models.rs
src/cache/: mod.rs
src/db/: jobs.rs  mod.rs  projects.rs  tasks.rs  tenants.rs  users.rs  utils.rs
src/handlers/: jobs.rs  mod.rs  projects.rs  tasks.rs  tenants.rs  users.rs
src/middleware/: tenant.rs
src/workers/: job_worker.rs  mod.rs
