[package]
name = "multi_tenant_saas"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp"] }
anyhow = "1"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
validator = { version = "0.18", features = ["derive"] } 
thiserror = "2.0.18"
futures-util = "0.3"
